dynamodb working version